Update signature with gravatar image

--- a/files/signature/signature.html
+++ b/files/signature/signature.html
@@ -5,14 +5,15 @@
       font-size: small;
     }
 
-    img {
-      height: 32px;
-    }
-
     .avatar {
-      width: 32px;
+      height: 50px;
+      width: 50px;
       border-radius: 50%;
       object-fit: cover;
+    }
+
+    .introhive {
+      height: 32px;
     }
 
     .vertical {
@@ -27,12 +28,13 @@
   </style>
 </head>
 <body>
+  <hr />
   <table>
     <tbody>
       <tr>
         <td>
-          <!-- avatar.jpg : linking to G Suite profile picture -->
-          <img class="avatar" src="https://lh3.google.com/u/0/ogw/ADGmqu8nVLxnYbR2vw5037uPtTGCD0P3_OxEIY-E9FIL=s32-c-mo" alt="Avatar" />
+          <!-- avatar.jpg : linking to gravatar -->
+          <img class="avatar" src="https://en.gravatar.com/userimage/191290965/eb72d030e697e16bb90fe82d5505d7db.jpg" alt="Avatar" />
         </td>
         <td>
           <div class="vertical"></div>
