Update email signature

--- a/files/signature/signature.html
+++ b/files/signature/signature.html
@@ -13,7 +13,7 @@
     }
 
     .introhive {
-      height: 32px;
+      height: 20px;
     }
 
     .vertical {
@@ -45,9 +45,9 @@
           <br />
           DevOps&nbsp;Engineer
           <br />
-          <a href="https://www.introhive.ai" target="_blank" rel="noopener noreferrer">
+          <a href="https://pages.introhive.com/request-a-demo/" target="_blank" rel="noopener noreferrer">
             <!-- introhive.gif : linking to G Suite company logo -->
-            <img class="introhive" src="https://www.google.com/a/cpanel/introhive.com/images/logo.gif?service=google_gsuite" alt="Introhive" />
+            <img class="introhive" src="./assets/logo.png" alt="Introhive" />
           </a>
         </td>
       </tr>
